# celestia-pfb-ui

./: README.md  docker-compose.yml
backend/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
backend/src/: main.rs  utils.rs
backend/src/api/: mod.rs  models.rs  rest_client.rs
backend/src/router/: app_router.rs  mod.rs
backend/src/router/handlers/: generator.rs  home.rs  mod.rs  pfb.rs  utils.rs
frontend/: Dockerfile  nx.json  package-lock.json  package.json  project.json  rspack.config.js
frontend/e2e/: project.json
frontend/src/: main.tsx
frontend/src/api/: apiService.ts
frontend/src/app/: app.tsx
frontend/src/app/api/: apiService.ts
frontend/src/app/components/: AppInput.tsx
frontend/src/app/hooks/: useJsonDownload.ts
frontend/src/app/hooks/apiHooks/: base.ts  useGeneratePfbParams.ts  useInitial.ts
