[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
celestia_generators = "0.1.1"
anyhow = "1.0.71"

# Logger
tracing = { version = "0.1.37", features = ["max_level_debug", "release_max_level_info", "log"] }
tracing-subscriber = "0.3.4"

# HTTP server
axum = { version = "0.6.18", features = ["http2", "multipart"] }
axum-server = { version = "0.4.7", features = ["tls-rustls"] }